// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskListLabel should render multiple workers correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={
  alignItems: 'center',
  columnGap: '12px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  lineHeight: '16px',
}
"
    >
      tasklist-1
      <span
        class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#D4E2FC',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '12px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#102C60',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '20px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: '2px',
  paddingLeft: '8px',
  paddingRight: '8px',
  paddingTop: '2px',
}
"
        data-baseweb="tag"
      >
        <span
          class="style={
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
          title="2 workers"
        >
          2 workers
        </span>
      </span>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`TaskListLabel should render no workers correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={
  alignItems: 'center',
  columnGap: '12px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  lineHeight: '16px',
}
"
    >
      tasklist-1
      <span
        class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#FED7D2',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '12px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#5A0A00',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '20px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: '2px',
  paddingLeft: '8px',
  paddingRight: '8px',
  paddingTop: '2px',
}
"
        data-baseweb="tag"
      >
        <span
          class="style={
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
          title="0 workers"
        >
          0 workers
        </span>
      </span>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`TaskListLabel should render one worker correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={
  alignItems: 'center',
  columnGap: '12px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  lineHeight: '16px',
}
"
    >
      tasklist-1
      <span
        class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#D4E2FC',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '12px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#102C60',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '20px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: '2px',
  paddingLeft: '8px',
  paddingRight: '8px',
  paddingTop: '2px',
}
"
        data-baseweb="tag"
      >
        <span
          class="style={
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
          title="1 worker"
        >
          1 worker
        </span>
      </span>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;
